# LawLens

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: ci.yml  deploy-api.yml  deploy-web.yml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: main.py
apps/api/app/ai/: llm.py
apps/api/app/ai/agents/: jurisdiction_router.py  verification.py
apps/api/app/ai/jurisdictions/: __init__.py  australia.py  base.py  canada.py  india.py  uk.py
apps/api/app/ai/pipeline/: graph.py  nodes.py  state.py
apps/api/app/ai/rerankers/: cohere.py
apps/api/app/ai/retrievers/: dense.py  hybrid.py  sparse.py
apps/api/app/api/v1/: __init__.py
apps/api/app/api/v1/routes/: admin.py  conversations.py  legal.py  webhooks.py
apps/api/app/core/: cache.py  config.py  database.py  security.py
apps/api/app/models/: __init__.py  analytics.py  citation.py  conversation.py  message.py  user.py
apps/api/app/schemas/: conversation.py  legal.py
apps/api/app/services/: legal_service.py
apps/api/tests/: test_health.py  test_pipeline.py
apps/web/: .env.local.example  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/components/3d/: books-scene.tsx  hero-scene.tsx  law-books-scene.tsx  orb-scene.tsx
apps/web/src/components/ai/: chat.tsx  message.tsx  (+4 more)
apps/web/src/providers/: lenis-provider.tsx  query-provider.tsx
apps/web/src/stores/: chat.store.ts  history.store.ts  jurisdiction.store.ts
docs/: ai-pipeline.md  architecture.md  database.md  deployment.md  research.md
infrastructure/: railway.toml
infrastructure/docker/: docker-compose.prod.yml  docker-compose.yml
scripts/: ingest.ts  ingest_documents.py  setup.sh
(+32 files in other folders)
